Taiza - Melhorando o html e css

--- a/cadastro_colab/src/main/resources/templates/index.html
+++ b/cadastro_colab/src/main/resources/templates/index.html
@@ -106,7 +106,7 @@
 
     button:active {
         letter-spacing: 0.1rem;
-      }
+    }
   </style>
 
   <body>
@@ -175,8 +175,8 @@
                 Outros</label
               >
               <label
-                ><input type="radio" name="gender" value="Prefiro não dizer" />
-                Prefiro não dizer</label
+                ><input type="radio" name="gender" value="Prefiro não informar" />
+                Prefiro não informar</label
               >
             </div>
           </div>
