--- a/cadastro_colab/src/main/resources/static/css/styles.css
+++ b/cadastro_colab/src/main/resources/static/css/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #cbb6f8;
@@ -6,69 +12,90 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-}
+  }
 
 .container {
-    display: flex;
-    background: white;
-    width: 900px;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  background: white;
+  width: 1050px;
+  height: 450px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .image-section {
-    width: 50%;
-    background-color: #f8e4c9;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
+  width: 50%;
+  background-color: #f8e4c9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
 
 .image-section img {
-    width: 80%;
+  width: 80%;
 }
 
 .form-section {
-    width: 50%;
-    padding: 40px;
+  width: 50%;
+  padding: 40px;
 }
 
 h2 {
-    margin-bottom: 20px;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  color: #333;
 }
 
 .input-group {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
 }
 
 .input-group input {
-    width: 48%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+  width: 47.5%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.gender-container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
+}
+
+.gender-title {
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 1rem;
 }
 
 .gender-group {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  color: #333;
 }
 
 button {
-    width: 100%;
-    background-color: #7d3cff;
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+  width: 100%;
+  background-color: #7d3cff;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.5s;
 }
 
 button:hover {
-    background-color: #5a2eb8;
+  letter-spacing: 0.1rem;
 }
 
+button:active {
+    letter-spacing: 0.1rem;
+}
