--- a/cadastro_colab/src/main/resources/templates/index.html
+++ b/cadastro_colab/src/main/resources/templates/index.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro</title>
     <link rel="stylesheet" href="/css/styles.css" />
+
+    <script>
+      function applyPhoneMask(event) {
+        let input = event.target;
+        let value = input.value.replace(/\D/g, ""); // Remove todos os caracteres não numéricos
+        
+        if (value.length <= 10) {
+          value = value.replace(/(\d{2})(\d{5})(\d{4})/, "($1) $2-$3"); // Máscara (XX) XXXXX-XXXX
+        } else {
+          value = value.replace(/(\d{2})(\d{5})(\d{4})/, "($1) $2-$3"); // Exemplo (XX) XXXXX-XXXX
+        }
+
+        input.value = value; // Atualiza o valor do campo
+      }
+    </script>
+    
   </head>
 
   <body>
@@ -39,8 +55,9 @@
             <input
               type="text"
               name="phone"
-              placeholder="(xx) xxxxx-xxxx"
+              placeholder="(XX) XXXXX-XXXX"
               required
+              oninput="applyPhoneMask(event)"
             />
           </div>
           <div class="input-group">
@@ -49,6 +66,7 @@
               name="password"
               placeholder="Digite sua senha"
               required
+              oninput="applyPhoneMask(event)"
             />
             <input
               type="password"
